<resources>
    <string name="app_name">WhatCard</string>

    <string name="navigation_categories">Categories</string>
    <string name="navigation_cards">Cards</string>
    <string name="navigation_settings">Settings</string>

    <string name="login_error">Log In Error</string>


    <string name="action_settings">Settings</string>
    <string name="action_log_in">Log In</string>

    <string name="add_card_description">Add a New Card</string>
    <string name="add_card">Add Card</string>
    <string name="add_another">Add Another</string>
    <string name="card_name">Card Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="pick_color">Pick a Color</string>
    <string name="add_extras">Add Category Rates</string>
    <string name="category_name">Category Name</string>
    <string name="card_rate">Card Reward Rate: 1%</string>
    <string name="category_rate">Category Reward Rate: 1%</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <string name="add_category_description">Add a New Category</string>
    <string name="add_category">Add Category</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
