<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

        <EditText
            android:id="@+id/categoryName"
            android:layout_width="wrap_content"
            android:textSize="@dimen/abc_text_size_small_material"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="2"
            android:hint="@string/category_name"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/isStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Is Store"/>


        <EditText
            android:id="@+id/categoryRate"
            android:textSize="@dimen/abc_text_size_small_material"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/category_rate"/>

        <EditText
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:textSize="@dimen/abc_text_size_small_material"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="2"
            android:inputType="date"
            android:focusable="false"
            android:hint="@string/start_date"/>

        <EditText
            android:id="@+id/endDate"
            android:textSize="@dimen/abc_text_size_small_material"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:inputType="date"
            android:focusable="false"
            android:hint="@string/end_date"/>


    </LinearLayout>