<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:background="@color/ultra_light_grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    tools:context="com.alexwglenn.whatcard.AddCardFragment"
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_card_description"
            android:gravity="left"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_margin="8dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:hint="@string/bank_name" />

                <EditText
                    android:id="@+id/card_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:hint="@string/card_name" />

                <TextView
                    android:id="@+id/cardRateTitle"
                    android:textSize="@dimen/abc_text_size_small_material"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/category_rate"/>

                <SeekBar
                    android:id="@+id/cardRateSeek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:max="20"
                    android:progress="4"/>


                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_color"
                    android:gravity="left"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:layout_margin="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="6"
                    android:gravity="center"
                    android:layout_margin="8dp">

                    <Button
                        android:id="@+id/blue_button"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="8dp"
                        android:background="@drawable/light_blue_circle"
                        android:textColor="@color/white"
                        style="?android:attr/borderlessButtonStyle"/>
                    <Button
                        android:id="@+id/purple_button"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="8dp"
                        android:textColor="@color/white"
                        android:background="@drawable/light_purple_circle"
                        style="?android:attr/borderlessButtonStyle"/>
                    <Button
                        android:id="@+id/green_button"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="8dp"
                        android:textColor="@color/white"
                        android:background="@drawable/light_green_circle"
                        style="?android:attr/borderlessButtonStyle"/>
                    <Button
                        android:id="@+id/orange_button"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="8dp"
                        android:textColor="@color/white"
                        android:background="@drawable/light_orange_circle"
                        style="?android:attr/borderlessButtonStyle"/>
                    <Button
                        android:id="@+id/red_button"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="8dp"
                        android:textColor="@color/white"
                        android:background="@drawable/light_red_circle"
                        style="?android:attr/borderlessButtonStyle"/>
                    <Button
                        android:id="@+id/grey_button"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="8dp"
                        android:textColor="@color/white"
                        android:background="@drawable/light_grey_circle"
                        style="?android:attr/borderlessButtonStyle"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_extras"
            android:gravity="left"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <LinearLayout
            android:id="@+id/category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <include layout="@layout/add_category_rate_sublayout"/>

            <Button
                android:id="@+id/add_another"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/accent"
                android:text="@string/add_another"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/dark_grey"
                android:layout_marginRight="8dp"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/add_card"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/accent"
                android:text="@string/add_card"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>